updated Adoption UI and logic, db fk, PersonInfo UI, added more wrapping classes

--- a/ShelterEvidency/Views/AdoptionCardView.xaml
+++ b/ShelterEvidency/Views/AdoptionCardView.xaml
@@ -4,96 +4,143 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
-             Background="{DynamicResource MaterialDesignPaper}"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        FontFamily="{DynamicResource MaterialDesignFont}"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+            FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="800" d:DesignWidth="1200">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <GroupBox Header="Základní informace o adoptovaném zvířeti:">
-            <StackPanel>
-                <TextBlock TextWrapping="Wrap" Text="Identifikační číslo:" Margin="5"/>
-                <TextBox x:Name="ID" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ID, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="Jméno:" Margin="5"/>
-                <TextBox x:Name="AnimalName" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=AnimalName, Mode=OneWay}" IsReadOnly="True"/>
+        <materialDesign:Card Grid.Column="1" Padding="2"
+            materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
-                <TextBlock TextWrapping="Wrap" Text="Číslo čipu:" Margin="5"/>
-                <TextBox x:Name="ChipNumber" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ChipNumber, Mode=OneWay}" IsReadOnly="True"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="1.5*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
 
-                <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
-                <TextBox x:Name="BirthDate" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=BirthDate, Mode=OneWay}" IsReadOnly="True"/>
+                <GroupBox Margin="10" Header="Základní informace o adoptovaném zvířeti:"   Style="{DynamicResource MaterialDesignGroupBox}"
+                  materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                  BorderThickness="0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="ID" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="ID" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ID, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="Pohlaví:" Margin="5"/>
-                <TextBox x:Name="Sex" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Sex, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox x:Name="AnimalName" Grid.Column="1"  VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=AnimalName, Mode=OneWay}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="Druh:" Margin="5"/>
-                <TextBox x:Name="Species" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Species, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox x:Name="ChipNumber" Grid.Row="1" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Číslo čipu" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ChipNumber, Mode=OneWay}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
-                <TextBox x:Name="Breed" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Breed, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox x:Name="BirthDate" Grid.Row="3" Grid.Column="1" materialDesign:HintAssist.Hint="Datum narození" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=BirthDate, Mode=OneWay}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
-                <TextBox x:Name="FurColor" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=FurColor, Mode=OneWay}" IsReadOnly="True"/>
-            </StackPanel>
-        </GroupBox>
+                        <TextBox x:Name="Sex" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Pohlaví" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Sex, Mode=OneWay}" IsReadOnly="True"/>
 
-        <GroupBox Grid.Column="1" Header="Základní informace o majiteli:">
-            <StackPanel>
-                <TextBlock TextWrapping="Wrap" Text="Jméno a příjmení:" Margin="5"/>
-                <TextBox x:Name="FullName" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=FullName, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox x:Name="Species" Grid.Row="2"  VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Druh" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Species, Mode=OneWay}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="Telefon:" Margin="5"/>
-                <TextBox x:Name="Phone" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Phone, Mode=OneWay}" IsReadOnly="True"/>
+                        <TextBox x:Name="Breed" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Plemeno"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Breed, Mode=OneWay}" IsReadOnly="True"/>
 
-                <TextBlock TextWrapping="Wrap" Text="E-mail:" Margin="5"/>
-                <TextBox x:Name="Mail" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Mail, Mode=OneWay}" IsReadOnly="True"/>
-
-                <GroupBox Header="Adresa:">
-                    <StackPanel>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <StackPanel>
-                                <TextBlock TextWrapping="Wrap" Text="Město:" Margin="5"/>
-                                <TextBox x:Name="City"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
-                            </StackPanel>
-                            <StackPanel Grid.Column="1">
-                                <TextBlock Grid.Column="1"  TextWrapping="Wrap" Text="PSČ:" Margin="5"/>
-                                <TextBox x:Name="Zip" Grid.Column="1" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
-                            </StackPanel>
-                        </Grid>
-
-                        <TextBlock TextWrapping="Wrap" Text="Ulice a číslo domu:" Margin="5"/>
-                        <TextBox x:Name="Street"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
-                    </StackPanel>
+                        <TextBox x:Name="FurColor" Grid.Row="3"  VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Barva srsti" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=FurColor, Mode=OneWay}" IsReadOnly="True"/>
+                    </Grid>
                 </GroupBox>
 
-            </StackPanel>
-        </GroupBox>
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
+                <GroupBox Margin="10" Grid.Row="1" Header="Základní informace o majiteli:" Style="{DynamicResource MaterialDesignGroupBox}"
+                  materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                  BorderThickness="0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="FullName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Jméno a příjmení" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=FullName, Mode=OneWay}" IsReadOnly="True"/>
 
-            <CheckBox Content="Zvíře vráceno z adopce" IsChecked="{Binding Path = Returned, Mode = TwoWay}" Margin="0,10" IsThreeState="False"/>
-            <GroupBox Header="Informace o vrácení" IsEnabled="{Binding Path = Returned}">
-                <StackPanel>
-                    <TextBlock TextWrapping="Wrap" Text="Datum vrácení:" Margin="5"/>
-                    <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=ReturnDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBlock TextWrapping="Wrap" Text="Důvod vrácení:" Margin="5"/>
-                    <TextBox  x:Name="ReturnReason" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                        <TextBox x:Name="Phone" Grid.Row="1" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Telefon" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Phone, Mode=OneWay}" IsReadOnly="True"/>
+
+                        <TextBox x:Name="Mail" Grid.Row="2" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="E-mail" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Mail, Mode=OneWay}" IsReadOnly="True"/>
+
+                        <materialDesign:Card Grid.Column="1" Grid.RowSpan="3" Margin="5"
+                            materialDesign:ShadowAssist.ShadowDepth="Depth1" Padding="10,0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBox x:Name="City"  Grid.Row="0" IsReadOnly="True" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Město"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                                <TextBox x:Name="Zip"  Grid.Row="1" IsReadOnly="True"  VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="PSČ" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                                <TextBox x:Name="Street"  Grid.Row="2" IsReadOnly="True"  VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Ulice a číslo domu"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                        </Grid>
+                        </materialDesign:Card>
+
+
+
+
+                    </Grid>
+                </GroupBox>
+
+
+
+
+
+                <Grid Grid.Row="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <ToggleButton VerticalAlignment="Center"
+                                  Style="{StaticResource MaterialDesignSwitchAccentToggleButton}"
+                                  IsChecked="{Binding Path = Returned, Mode = TwoWay}" Margin="5" IsThreeState="False"/>
+                        <TextBlock VerticalAlignment="Center" Text="zvíře vráceno z adopce" Margin="10,0,0,0"></TextBlock>
+                    </StackPanel>
+
+                    <GroupBox Margin="10" Grid.Row="1" Style="{DynamicResource MaterialDesignGroupBox}" materialDesign:ColorZoneAssist.Mode="Accent"  Header="Informace o vrácení" IsEnabled="{Binding Path = Returned}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition Height="2*"/>
+                            </Grid.RowDefinitions>
+                            <DatePicker Margin="5,0,5,5" materialDesign:HintAssist.Hint="Datum vrácení" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=ReturnDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <TextBox Grid.Row="1" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Důvod vrácení"  x:Name="ReturnReason" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                        </Grid>
+                    </GroupBox>
+
+                </Grid>
+
+
+                <StackPanel Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
+                    <Button Style="{StaticResource MaterialDesignFlatAccentButton}" x:Name="Cancel" Content="Zrušit" Width="75" Margin="5,0,15,5"/>
+                    <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" x:Name="SaveToDatabase" Margin="5,0,5,5">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <materialDesign:PackIcon Kind="ContentSaveOutline"  Width="20" Height="20"/>
+                            <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">Uložit</TextBlock>
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
-            </GroupBox>
-            <Button x:Name="SaveToDatabase" Content="Uložit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
-        </StackPanel>
+
+            </Grid>
+        </materialDesign:Card>
+
     </Grid>
 </UserControl>
