--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -48,15 +48,15 @@
                           materialDesign:ShadowAssist.ShadowDepth="Depth3"
                           BorderThickness="0" FontSize="14">
                         <StackPanel>
-                            <TextBox x:Name="AnimalName" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                            <TextBox x:Name="AnimalName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
-                            <TextBox x:Name="ChipNumber" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Číslo čipu/tetování:" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                            <TextBox x:Name="ChipNumber" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Číslo čipu/tetování:" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
-                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" materialDesign:HintAssist.Hint="Pohlaví" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=OneWayToSource}"/>
+                            <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" materialDesign:HintAssist.Hint="Pohlaví" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=OneWayToSource}"/>
 
-                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=OneWayToSource}"/>
+                            <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=OneWayToSource}"/>
 
-                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Plemeno" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}"/>
+                            <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Plemeno" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}"/>
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -66,7 +66,7 @@
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <ToggleButton VerticalAlignment="Center"
                                   Style="{StaticResource MaterialDesignSwitchAccentToggleButton}"
-                                  ToolTip="MaterialDesignSwitchAccentToggleButton" IsChecked="{Binding Path = Castration, Mode = OneWayToSource}" Margin="5" IsThreeState="False"/>
+                                  IsChecked="{Binding Path = Castration, Mode = OneWayToSource}" Margin="5" IsThreeState="False"/>
                                     <TextBlock VerticalAlignment="Center" Text="kastrát" Margin="10,0,0,0"></TextBlock>
                                 </StackPanel>
 
@@ -88,8 +88,8 @@
                                     <ColumnDefinition/>
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
-                                <TextBox x:Name="Weight" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Váha (kg)"  TextWrapping="Wrap" Margin="5" Padding="2"/>
-                                <TextBox x:Name="FeedRation" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Krmná dávka (g)" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                                <TextBox x:Name="Weight" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Váha (kg)"  TextWrapping="Wrap" Margin="5" Padding="2"/>
+                                <TextBox x:Name="FeedRation" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Krmná dávka (g)" TextWrapping="Wrap" Margin="5" Padding="2"/>
                             </Grid>
 
                             <Grid>
@@ -99,20 +99,20 @@
                                 </Grid.ColumnDefinitions>
 
 
-                                <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Barva srsti" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}"/>
+                                <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Barva srsti" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}"/>
 
-                                <ComboBox Margin="5" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Typ srsti" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=OneWayToSource}"/>
+                                <ComboBox Margin="5" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Typ srsti" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=OneWayToSource}"/>
 
                             </Grid>
 
-                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Kříženec" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=OneWayToSource}"/>
+                            <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Kříženec" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=OneWayToSource}"/>
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
-                                <DatePicker Margin="5"  materialDesign:HintAssist.Hint="Datum narození" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
+                                <DatePicker Margin="5" VerticalAlignment="Center"  materialDesign:HintAssist.Hint="Datum narození" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
                             </Grid>
 
 
@@ -125,7 +125,7 @@
 
 
                 <StackPanel Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
-                    <Button Style="{StaticResource MaterialDesignFlatAccentButton}" x:Name="Cancel" Content="Zrušit" Width="75" Margin="5,0,5,5"/>
+                    <Button Style="{StaticResource MaterialDesignFlatAccentButton}" x:Name="Cancel" Content="Zrušit" Width="75" Margin="5,0,15,5"/>
                     <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" x:Name="SaveToDatabase" Margin="5,0,5,5">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <materialDesign:PackIcon Kind="ContentSaveOutline"  Width="20" Height="20"/>
